compiler/testData/diagnostics/tests/SafeCallUnknownType.kt
// !WITH_NEW_INFERENCE
import <!UNRESOLVED_REFERENCE!>com<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>unknown<!>

fun ff() {
    val a = <!UNRESOLVED_REFERENCE!>unknown<!>()
    val b = <!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE!>a<!>?.<!DEBUG_INFO_ELEMENT_WITH_ERROR_TYPE{OI}, DEBUG_INFO_MISSING_UNRESOLVED{NI}!>plus<!>(42)
}
